TASK: Reduce button sizes to fit on one line
- Fix inclusion of style.css.
- Add detailed button tooltips.
- Use native Neos UI icon component instead of custom SVGs and CSS
  styles to align with similar icon presentations.
- Set fixed icon width and height for all button states to prevent
  buttons from shrinking and enlarging.
- Buttons evenly consume all available space.

--- a/Resources/Public/JavaScript/AnchorView/Plugin.css
+++ b/Resources/Public/JavaScript/AnchorView/Plugin.css
@@ -1,6 +1,12 @@
 .style__syncButton___3cjXz {
     outline: none !important;
 }
+.style__copyNeosLinkButton___iQwVj {
+	flex: 1;
+}
+.style__copyUriButton___6kNyN {
+	flex: 1;
+}
 
 
 /*# sourceMappingURL=Plugin.css.map*/
