TASK: Move all style definitions from AnchorView.js to style.css
- Move all style definitions from AnchorView.js to style.css.
- Change copy buttons from fixed size to auto size to be more flexible
  with different label lengths.
- Leave SectionIdEditor.js unchanged, as it should remain comparable
  to the original Neos.Neos.Ui/packages/neos-ui-editors/src/Editors/UriPathSegment/index.js.

--- a/Resources/Private/JavaScript/AnchorView/src/style.css
+++ b/Resources/Private/JavaScript/AnchorView/src/style.css
@@ -1,9 +1,10 @@
 .syncButton {
     outline: none !important;
 }
-.copyNeosLinkButton {
-	flex: 1;
+.flexAuto {
+	display: flex;
+	gap: 0px 8px;
 }
-.copyUriButton {
-	flex: 1;
+.flexAuto > * {
+	flex: auto;
 }
